Vaultwarden/04-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden-deployment
  namespace: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      securityContext:
        fsGroup: 1000 # # <-- Add your own user GID
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "0"
      containers:
      - name: app
        image: vaultwarden/server:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: vaultwarden-data
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /api/alive
            port: http
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/alive
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
          failureThreshold: 3
          timeoutSeconds: 5
        
      volumes:
      - name: vaultwarden-data
        persistentVolumeClaim:
          claimName: vaultwarden-data-pvc
